myteo/test/analyze/type_check/binary_operation/add.myte
module Test

fun main() {
  // Non-erroring cases
  (1 + 1: int);
  (1 + 2 + 3 + 4: int);
  ("a" + "a": string);
  ("a" + "b" + "c" + "": string);

  // If only one type is addable error and type expression with that type
  (1 + true: int);
  (true + "a": string);

  // If both types are addable but incompatible error and type expression with
  // left hand type.
  (1 + "a": int);
  ("a" + 1: string);

  // If neither type is addable error on both sides but do not enforce type for expression
  (true + (): int => int);
}